<resources>
    <string name="app_name">Almacenamiento</string>
    <string name="action_settings">Propiedades</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="sp_color_bar">COLOR_BARRA</string>
    <string name="txt_edttexto">Escriba el Contenido</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_load">Cargar</string>
    <string name="name_file">Nombre del Fichero</string>
    <string name="action_almint">Almacenamiento Interno</string>
    <string name="action_almext">Almacenamiento Externo</string>

</resources>