<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.FirstFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_namefile"
        android:hint="@string/name_file" />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_load"
        android:text="@string/btn_load" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="4"
        android:id="@+id/edt_texto"
        android:hint="@string/txt_edttexto" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_save"
        android:text="@string/btn_save" />
    
</LinearLayout>