<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.almacenamiento.actividades.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_almint"
        android:orderInCategory="200"
        android:title="@string/action_almint"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_edit" />
    <item
        android:id="@+id/action_almext"
        android:orderInCategory="300"
        android:title="@string/action_almext"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_save" />
</menu>